cabal-version:      3.0
name:               send
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             rhermens
maintainer:         royhermens@hotmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable send
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Lexer
        Parser
    -- other-extensions:
    build-depends:
        base ^>=4.20.2.0,
        optparse-applicative ^>=0.19.0.0,
        split ^>=0.2.5
    hs-source-dirs:   app
    default-language: GHC2024
