cabal-version:      3.0
name:               send
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             rhermens
maintainer:         royhermens@hotmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library send-lib
    exposed-modules:
        Lexer
        Parser
        Client
    build-depends:
        base ^>=4.20.2.0,
        split ^>=0.2.5,
        network-uri ^>=2.6.4.2,
        http-conduit ^>=2.3.9.1,
        bytestring ^>=0.12.2.0
    hs-source-dirs:   lib
    default-language: GHC2024

executable send
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        send-lib,
        optparse-applicative ^>=0.19.0.0
    hs-source-dirs:   app
    default-language: GHC2024

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    other-modules:
        LexerTests
    build-depends:
        base ^>=4.20.2.0,
        HUnit ^>=1.6,
        network-uri ^>=2.6.4.2,
        raw-strings-qq ^>=1.1,
        send-lib
    hs-source-dirs: tests
    default-language: GHC2024
